import { tagTableElement } from '@customTypes/DatabaseElementTypes';

export const englishTags: tagTableElement[] = [
  { name: 'Breakfast' },
  { name: 'Lunch' },
  { name: 'Dinner' },
  { name: 'Appetizer' },
  { name: 'Dessert' },
  { name: 'French' },
  { name: 'Italian' },
  { name: 'Asian' },
  { name: 'Mexican' },
  { name: 'Indian' },
  { name: 'Mediterranean' },
  { name: 'Vegetarian' },
  { name: 'Vegan' },
  { name: 'Gluten-free' },
  { name: 'Soup' },
  { name: 'Salad' },
  { name: 'Quick' },
  { name: 'Healthy' },
];
