...
 * @param props - The component props
 * @returns JSX element representing a recipe image with dynamic overlay button
 */
export function RecipeImage({ imgUri, openModal, buttonIcon }: RecipeImageProps) {
  const [validUri, setValidUri] = React.useState(imgUri.length > 0);

  const imageTestID = 'RecipeImage';
  return (
    <View style={styles.recipeImageContainer} testID={imageTestID}>
      <CustomImage
        testID={imageTestID}
        uri={imgUri}
        onLoadError={() => {
...
