export default {
  missingElements: {
    titleAll: 'All elements missing',
    titleSingular: 'Missing element',
    titlePlural: 'Missing elements',
    messageAll:
      "You haven't add any of the elements to your recipe. Please enter before validate at least: \
                                                \n\t- an image\n\t- a title\n\t- some ingredients\n\t- for how many persons this recipe is\n\t- some instructions for the preparation",
    messageSingularBeginning: "You're missing ",
    messageSingularEnding: ' to your recipe. Please add this before validate.',
    messageSingularNutrition:
...
