...
    title: 'Spaghetti Bolognese',
    description: 'A classic Italian dish with a savory meat sauce.',
    tags: [{ name: 'Italian' }, { name: 'Dinner' }],
    persons: 4,
    ingredients: [
      {
        name: 'Spaghetti',
        quantity: '400',
        unit: 'g',
        type: ingredientType.cereal,
        season: ['*'],
      },
      {
...
