export default {
  filterTypes: {
    recipeTitleInclude: 'recipeTitleInclude',
    prepTime: 'Preparation Time',
    inSeason: 'Only in-season ingredients',
    tags: 'Tags',
    purchased: 'Already purchased',
  },
};
