...
  removeTitleInMultimap,
  removeValueToMultimap,
  retrieveAllFilters,
} from '@utils/FilterFunctions';
import { useI18n } from '@utils/i18n';
import { Divider, Text, useTheme } from 'react-native-paper';
import { SearchBar } from '@components/organisms/SearchBar';
import { SearchBarResults } from '@components/organisms/SearchBarResults';
import { FiltersSelection } from '@components/organisms/FiltersSelection';
import { padding } from '@styles/spacing';
import { RecipeCard } from '@components/molecules/RecipeCard';
import { FilterAccordion } from '@components/organisms/FilterAccordion';
import { useSeasonFilter } from '@context/SeasonFilterContext';
...
