export default {
  home: 'Home',
  shopping: 'Shopping',
  parameters: 'Parameters',
  recipe: 'Recipe',
  search: 'Search',
  plannification: 'Planning',
};
