appId: "com.recipedia"
---
- assertVisible:
    id: "com.recipedia:id/alertTitle"
    text: "Missing elements"
    label: Alert title is displayed
- assertVisible:
    text: "You haven't add all of the elements to your recipe. Please enter\
    \ before validate at least: \n\t- a title\n\t- some ingredients\n\t- some instructions\
    \ for the preparation"
    label: Alert message containing all missing elements is displayed
- assertVisible:
    id: "android:id/button1"
    text: "Understood"
    label: Alert validation button is displayed
- tapOn:
    text: "Understood"
    label: Tap on the validation button
