appId: "com.recipedia"
---
- tapOn:
    text: "󰍉"
    label: Open Search screen
- tapOn:
    text: "Add a filter"
    label: Open the filter page
- runFlow: expandAllCategories.yaml
- tapOn:
    text: "󰄱, Spaghetti"
    label: Select Spaghetti as filter
- runFlow: ../../../asserts/Search/Filters/filtersViewFilteredOnSpaghetti.yaml
- tapOn:
    text: "Spaghetti"
    label: Remove Spaghetti as filter
# TODO spaghetti checkbox shall not be ticked now
- tapOn:
    text: "Add a filter"
    label: Close the filter page
- runFlow: ../../../asserts/Search/searchScreenVisible.yaml
- pressKey: "BACK"
