appId: "com.recipedia"
---
- tapOn:
    text: "󰍉"
    label: Open Search screen
- tapOn:
    text: "Add a filter"
    label: Open the filter page
- runFlow: expandAllCategories.yaml
- swipe:
    start: "50%,85%"
    end: "50%,20%"
    label: Swipe down to see other items
- swipe:
    start: "50%,85%"
    end: "50%,20%"
    label: Swipe down to see other items
- swipe:
    start: "50%,85%"
    end: "50%,20%"
    label: Swipe down to see other items
- tapOn:
    text: "󰄱, 15-20 min"
    label: Select 15-20 min as filter
- swipe:
    start: "50%,20%"
    end: "50%,90%"
    label: Swipe Up to reset to initial position
- swipe:
    start: "50%,20%"
    end: "50%,80%"
    label: Swipe Up to reset to initial position
- runFlow: ../../../asserts/Search/Filters/filtersViewFilteredOn1520Min.yaml
- tapOn:
    text: "Add a filter"
    label: Close the filter page
- runFlow: ../../../asserts/Search/searchScreenFilteredOn1520Min.yaml
- tapOn:
    text: "Add a filter"
    label: Open the filter page
- runFlow: expandCategories1520Min.yaml
- tapOn:
    text: "󰄱, Romaine Lettuce"
    label: Add the Romaine Lettuce in filters
- runFlow: ../../../asserts/Search/Filters/filtersViewFilteredOn1520MinAndLettuce.yaml
- tapOn:
    text: "Add a filter"
    label: Close the filter page
- runFlow: ../../../asserts/Search/searchScreenFilteredOn1520MinAndLettuce.yaml
- tapOn:
    text: "15-20 min"
    label: Remove 15-20 min filter
- runFlow: ../../../asserts/Search/searchScreenFilteredOnLettuce.yaml
- pressKey: "BACK"
