appId: "com.recipedia"
---
- tapOn:
    text: "󰍉"
    label: Open Search screen
- tapOn:
    id: "SearchBar"
    label: Open Search Bar
- inputText:
    text: "Ca"
    label: Input text 'Ca' in the Bar
- pressKey: "enter"
- tapOn:
    text: "Add a filter"
    label: Open the filter page
- swipe:
    start: "50%,85%"
    end: "50%,20%"
    label: Swipe down to see other items
- tapOn:
    text: "Tags"
    label: Tap on Tags category to select an element inside
- swipe:
    start: "50%,80%"
    end: "50%,30%"
    label: Swipe down to see other items
- tapOn:
    text: "󰄱, Chocolate"
    label: Select tag Chocolate as filter
- runFlow: expandCategoriesCaAndChocolate.yaml
- runFlow: ../../../asserts/Search/Filters/filtersViewFilteredOnCaAndChocolate.yaml
- tapOn:
    text: "Add a filter"
    label: Close the filter page
- runFlow: ../../../asserts/Search/searchScreenFilteredOnCaAndChocolate.yaml
- pressKey: "BACK"
