appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::18"
    direction: DOWN
    label: "Scroll to Tags category"
- tapOn:
    text: "Tags"
    label: "Tap on Tags to see filters under this category"
- tapOn:
    text: "Only in-season ingredients"
    label: "Tap on In-season to see filters under this category"
- tapOn:
    text: "Preparation Time"
    label: "Tap on Preparation Time to see filters under this category"
- tapOn:
    text: "Nuts and Seeds"
    label: "Tap on Nuts and Seeds to see filters under this category"
- tapOn:
    text: "Oil and Fat"
    label: "Tap on Oil and Fat to see filters under this category"
- tapOn:
    text: "Fruit"
    label: "Tap on Fruit to see filters under this category"
- tapOn:
    text: "Spice"
    label: "Tap on Spice to see filters under this category"
- tapOn:
    text: "Sugar"
    label: "Tap on Sugar to see filters under this category"
- tapOn:
    text: "Cheese"
    label: "Tap on Cheese to see filters under this category"
- tapOn:
    text: "Dairy"
    label: "Tap on Dairy to see filters under this category"
- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::8"
    direction: UP
    label: "Scroll up to Fish category"
- tapOn:
    text: "Fish"
    label: "Tap on Fish to see filters under this category"
- tapOn:
    text: "Poultry"
    label: "Tap on Poultry to see filters under this category"
- tapOn:
    text: "Meat"
    label: "Tap on Meat to see filters under this category"
- tapOn:
    text: "Sauce"
    label: "Tap on Sauce to see filters under this category"
- tapOn:
    text: "Condiment"
    label: "Tap on Condiment to see filters under this category"
- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::3"
    direction: UP
    label: "Scroll up to Plant Protein category"
- tapOn:
    text: "Plant Protein"
    label: "Tap on Plant Protein to see filters under this category"
- tapOn:
    text: "Vegetable"
    label: "Tap on Vegetable to see filters under this category"
- tapOn:
    text: "Legumes"
    label: "Tap on Legumes to see filters under this category"
- tapOn:
    text: "Grain or Cereal"
    label: "Tap on Grain Or Cereal to see filters under this category"
