appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::18"
    direction: DOWN
    label: "Scroll to Tags category"
- tapOn:
    text: "Tags"
    label: "Tap on Tags to see filters under this category"
- tapOn:
    text: "Only in-season ingredients"
    label: "Tap on In-season to see filters under this category"
- tapOn:
    text: "Preparation Time"
    label: "Tap on Preparation Time to see filters under this category"
- tapOn:
    text: "Oil and Fat"
    label: "Tap on Oil and Fat to see filters under this category"
- tapOn:
    text: "Nuts and Seeds"
    label: "Tap on Nuts and Seeds to see filters under this category"
- tapOn:
    text: "Spice"
    label: "Tap on Spice to see filters under this category"
- tapOn:
    text: "Cheese"
    label: "Tap on Cheese to see filters under this category"
- tapOn:
    text: "Poultry"
    label: "Tap on Poultry to see filters under this category"
- tapOn:
    text: "Sauce"
    label: "Tap on Sauce to see filters under this category"
- tapOn:
    text: "Vegetable"
    label: "Tap on Vegetable to see filters under this category"
- tapOn:
    text: "Grain or Cereal"
    label: "Tap on Grain Or Cereal to see filters under this category"
- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::0"
    direction: UP
    label: "Scroll back to top"
