appId: "com.recipedia"
---
- tapOn:
    text: "Only in-season ingredients"
    label: "Tap on In-season to see filters under this category"
- tapOn:
    text: "Preparation Time"
    label: "Tap on Preparation Time to see filters under this category"
- tapOn:
    text: "Oil and Fat"
    label: "Tap on Oil and Fat to see filters under this category"
- tapOn:
    text: "Spice"
    label: "Tap on Spice to see filters under this category"
- tapOn:
    text: "Sugar"
    label: "Tap on Sugar to see filters under this category"
- tapOn:
    text: "Grain or Cereal"
    label: "Tap on Grain Or Cereal to see filters under this category"
