appId: "com.recipedia"
name: "Launch and check screens are displayed correctly"

---
- launchApp

- runFlow: asserts/Home/homeScreenVisible.yaml
- tapOn:
    text: "Shopping"
    label: Go to Shopping screen
- runFlow: asserts/Shopping/shoppingEmpty.yaml

- tapOn:
    text: "Home"
    label: Return to Home screen
- tapOn:
    text: "Parameters"
    label: Go to Parameters screen
- runFlow: asserts/Parameters/Parameters.yaml
- tapOn:
    text: "Home"
    label: Return to Home screen
- runFlow: asserts/Home/homeScreenVisible.yaml
